--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/NavyaSreebodd/Boddupalli-Navya-Sree-/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -44,26 +34,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "e6b00c93-c0d3-4c5d-838d-8bca308c217c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type."
+        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
+        "x=10\n",
+        "print(type(x))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "outputId": "cf338c01-b44a-45d2-fa58-f44a4011f09e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 123
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-10-b15618e43168>, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-b15618e43168>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    and print their sum.\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15,\n",
+        "and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "print(a+b+c)"
       ]
     },
     {
@@ -1004,8 +1027,7 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
