--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -34,11 +34,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "e6b00c93-c0d3-4c5d-838d-8bca308c217c",
+        "outputId": "b65c1d8d-6b06-4e01-9102-db478e7b6801",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -60,29 +60,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
         "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "cf338c01-b44a-45d2-fa58-f44a4011f09e",
+        "outputId": "1c1b035d-70e9-4ce4-bd25-1f679000654b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 123
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-10-b15618e43168>, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-b15618e43168>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    and print their sum.\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
           ]
         }
       ],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15,\n",
-        "and print their sum.\n",
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
         "a=5\n",
         "b=10\n",
         "c=15\n",
@@ -91,14 +88,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+        "outputId": "355df669-fc82-44aa-8739-a0265c79bed8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
+        "\n",
+        "+# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
+        "x=7\n",
+        "print(type(x))"
       ]
     },
     {
