--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -34,65 +34,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "b65c1d8d-6b06-4e01-9102-db478e7b6801",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'int'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
-        "x=10\n",
-        "print(type(x))"
+        "# Write a Python program to declare a variable x with the value 10 and print its type."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "1c1b035d-70e9-4ce4-bd25-1f679000654b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "30\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
-        "a=5\n",
-        "b=10\n",
-        "c=15\n",
-        "print(a+b+c)"
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
-        "outputId": "355df669-fc82-44aa-8739-a0265c79bed8",
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+      "metadata": {
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "outputId": "6752d49f-012b-469b-f5b8-ef49b5b80126",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -102,39 +84,47 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'int'>\n"
+            "12\n",
+            "-2\n",
+            "0.7142857142857143\n",
+            "35\n",
+            "5\n"
           ]
         }
       ],
       "source": [
-        "\n",
-        "+# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
-        "x=7\n",
-        "print(type(x))"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "a=5\n",
+        "b=7\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a/b)\n",
+        "print(a*b)\n",
+        "print(a%b)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
-      "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "outputId": "ae244f45-ec3d-434a-b593-f59a21fc7486",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "int\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n"
       ]
     },
     {
