--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -34,14 +34,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "ba039c78-c523-4124-bb05-b0bd413228b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type."
+        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
+        "x=10\n",
+        "print(type(x))"
       ]
     },
     {
@@ -70,61 +84,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
-        "outputId": "6752d49f-012b-469b-f5b8-ef49b5b80126",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "12\n",
-            "-2\n",
-            "0.7142857142857143\n",
-            "35\n",
-            "5\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
-        "a=5\n",
-        "b=7\n",
-        "print(a+b)\n",
-        "print(a-b)\n",
-        "print(a/b)\n",
-        "print(a*b)\n",
-        "print(a%b)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
-        "outputId": "ae244f45-ec3d-434a-b593-f59a21fc7486",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "int\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n"
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
       ]
     },
     {
