--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NavyaSreebodd/Boddupalli-Navya-Sree-/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -34,15 +44,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "ba039c78-c523-4124-bb05-b0bd413228b7",
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to declare a variable x with the value 10 and print its type."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=10\n",
+        "print(type(x))"
+      ],
+      "metadata": {
+        "id": "5ICY8IMQAuqd",
+        "outputId": "000e7195-a898-424f-a523-ca417caa5fb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
+      "id": "5ICY8IMQAuqd",
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,11 +77,6 @@
             "<class 'int'>\n"
           ]
         }
-      ],
-      "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
-        "x=10\n",
-        "print(type(x))"
       ]
     },
     {
@@ -1008,7 +1029,8 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
