--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -56,31 +56,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "x=10\n",
-        "print(type(x))"
-      ],
-      "metadata": {
-        "id": "5ICY8IMQAuqd",
-        "outputId": "000e7195-a898-424f-a523-ca417caa5fb4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "5ICY8IMQAuqd",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'int'>\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
@@ -89,6 +64,33 @@
       "outputs": [],
       "source": [
         "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "print(a+b+c)"
+      ],
+      "metadata": {
+        "id": "ktNCgIV7DS6t",
+        "outputId": "94f4c659-1f19-42a1-938d-3ddf0eecf3e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ktNCgIV7DS6t",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
+        }
       ]
     },
     {
