--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -44,14 +44,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "b141f32d-c2cc-4e32-f766-b93f8f2cc0d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type."
+        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
+        "x=10\n",
+        "print(type(x))"
       ]
     },
     {
@@ -107,19 +121,117 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
-      "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
-      },
-      "outputs": [],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
+        "x='23'\n",
+        "print(type(x))"
+      ],
+      "metadata": {
+        "id": "2wruYLlWVe6y",
+        "outputId": "2549dcd2-7f5e-4ed7-e4bf-cd4a3ef68104",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "2wruYLlWVe6y",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "x=10\n",
+        "print(type(x))"
+      ],
+      "metadata": {
+        "id": "oT_79E1UVXYM",
+        "outputId": "732f40d5-3299-4755-a895-3ea5c0533be7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "oT_79E1UVXYM",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=12.3\n",
+        "print(type(x))"
+      ],
+      "metadata": {
+        "id": "MWQl2Nz_VPOj",
+        "outputId": "ffb7af15-4341-486c-ba01-a8aee14ad658",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "MWQl2Nz_VPOj",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+      "metadata": {
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "outputId": "b8de67be-588c-4070-f4d0-04368a21bfd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "-5\n",
+            "0.2857142857142857\n",
+            "2\n",
+            "14\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "a=2\n",
+        "b=7\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a/b)\n",
+        "print(a%b)\n",
+        "print(a*b)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
         "id": "629435bd-6bfa-44de-91d9-3b2937713257",
