--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
@@ -133,7 +133,7 @@
         }
       },
       "id": "2wruYLlWVe6y",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         }
       },
       "id": "oT_79E1UVXYM",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         }
       },
       "id": "MWQl2Nz_VPOj",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
         "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
@@ -261,26 +261,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+        "outputId": "aaa7e4ae-0c4b-4c9f-8360-cabb4a21d232",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string:23\n",
+            "the first character is: 2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)"
+        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
+        "input_string=input(\"Enter a string:\")\n",
+        "if input_string:\n",
+        "  print(\"the first character is:\", input_string[0])\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+        "outputId": "090459b1-0b65-4ba5-b955-8e22ffee8c21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string:234556\n",
+            "6\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)"
+        "# Write a Python program to print the length of a string. (User input for the string)\n",
+        "input_string=input(\"Enter a string:\")\n",
+        "if input_string:\n",
+        "  print(len(input_string))"
       ]
     },
     {
@@ -292,7 +325,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets."
+        "# Write a Python program to check if a given string contains only alphabets.\n"
       ]
     },
     {
