--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -261,22 +261,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
         "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
-        "outputId": "aaa7e4ae-0c4b-4c9f-8360-cabb4a21d232",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7240879e-b1f8-4bdc-8f45-f250656f1b44"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a string:23\n",
-            "the first character is: 2\n"
+            "Enter a string:navya\n",
+            "the first character is: n\n"
           ]
         }
       ],
@@ -290,42 +290,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 12,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
         "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
-        "outputId": "090459b1-0b65-4ba5-b955-8e22ffee8c21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c0482d91-1242-4bfb-fe34-8e1e436c8b8a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a string:234556\n",
-            "6\n"
+            "Enter a string:navya\n",
+            "The length of a string navya is: 5\n"
           ]
         }
       ],
       "source": [
         "# Write a Python program to print the length of a string. (User input for the string)\n",
-        "input_string=input(\"Enter a string:\")\n",
+        "a=input(\"Enter a string:\")\n",
         "if input_string:\n",
-        "  print(len(input_string))"
+        "  print(f\"The length of a string {a} is: {len(input_string)}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b2d3eb2-f7ce-45bf-9129-fe0a46ff1d7c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "r72tg9 does not contain only alphabets\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets.\n"
+        "# Write a Python program to check if a given string contains only alphabets.\n",
+        "a='r72tg9'\n",
+        "\n",
+        "if (a.isalpha()):\n",
+        "  print(f\"{a} contains only alphabets\")\n",
+        "else:\n",
+        "  print(f\"{a} does not contain only alphabets\")\n",
+        "\n",
+        "\n"
       ]
     },
     {
