--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -231,11 +231,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
         "id": "629435bd-6bfa-44de-91d9-3b2937713257",
-        "outputId": "89d40c8c-4015-4216-b325-55efb8a94477",
+        "outputId": "13ada21e-7997-476e-8cad-f9990dce93a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -245,23 +245,23 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'int'>\n",
-            "<class 'type'>\n"
+            "integer 123\n",
+            "float 123.0\n"
           ]
         }
       ],
       "source": [
         "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
-        "a='123'\n",
-        "b=int(a)\n",
-        "print(type(b))\n",
-        "c=float\n",
-        "print(type(c))"
+        "string='123'\n",
+        "integer=int(string)\n",
+        "print(\"integer\",integer)\n",
+        "float_num=float(string)\n",
+        "print(\"float\",float_num)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
         "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
         "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
         "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
@@ -350,14 +350,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+        "outputId": "6fa3c4b2-5861-4bb2-e66f-cdd7fa61c501",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the first stringhello\n",
+            "Enter the second stringworld\n",
+            "helloworld\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)"
+        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
+        "string1=input(\"Enter the first string\")\n",
+        "string2=input(\"Enter the second string\")\n",
+        "result=string1+string2\n",
+        "print(result)"
       ]
     },
     {
