--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
         "id": "629435bd-6bfa-44de-91d9-3b2937713257",
@@ -343,18 +343,16 @@
         "if (a.isalpha()):\n",
         "  print(f\"{a} contains only alphabets\")\n",
         "else:\n",
-        "  print(f\"{a} does not contain only alphabets\")\n",
-        "\n",
-        "\n"
+        "  print(f\"{a} does not contain only alphabets\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
         "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
-        "outputId": "6fa3c4b2-5861-4bb2-e66f-cdd7fa61c501",
+        "outputId": "63ff4101-0cec-4e33-8187-e23731c6166a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -364,9 +362,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the first stringhello\n",
-            "Enter the second stringworld\n",
-            "helloworld\n"
+            "Enter the first stringnavya\n",
+            "Enter the second stringsree\n",
+            "navyasree\n"
           ]
         }
       ],
