--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -284,8 +284,7 @@
         "# Write a Python program to print the first character of a given string. (User input for the string)\n",
         "input_string=input(\"Enter a string:\")\n",
         "if input_string:\n",
-        "  print(\"the first character is:\", input_string[0])\n",
-        "\n"
+        "  print(\"the first character is:\", input_string[0])"
       ]
     },
     {
@@ -348,11 +347,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
         "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
-        "outputId": "63ff4101-0cec-4e33-8187-e23731c6166a",
+        "outputId": "a5ce657b-bc0d-465b-9327-600c9c6ffc88",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -362,9 +361,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the first stringnavya\n",
-            "Enter the second stringsree\n",
-            "navyasree\n"
+            "Enter the first stringhello\n",
+            "Enter the second stringworld\n",
+            "helloworld\n"
           ]
         }
       ],
