--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
         "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
@@ -377,14 +377,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
-        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf"
+        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
+        "outputId": "a18b3b05-1f09-4e41-85e9-acea70c012d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: i have abc\n",
+            "The index of 'abc' in the string is: 7\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
+        "#write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
+        "def find_substring(string):\n",
+        "    return string.find(\"abc\")\n",
+        "\n",
+        "string = input(\"Enter a string: \")\n",
+        "index = find_substring(string)\n",
+        "\n",
+        "if index != -1:\n",
+        "    print(\"The index of 'abc' in the string is:\", index)\n",
+        "else:\n",
+        "    print(\"The substring 'abc' is not found in the string\")\n"
       ]
     },
     {
@@ -396,7 +419,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)"
+        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n"
       ]
     },
     {
