--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
         "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
@@ -412,62 +412,155 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
-        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2"
+        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
+        "outputId": "24c067c9-3b83-4d9c-e7c6-cbf5d04829ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: navya\n",
+            "uppercase: NAVYA\n",
+            "lowercase: navya\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n"
+        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n",
+        "def convert(input_string):\n",
+        "\n",
+        "    uppercase_string = input_string.upper()\n",
+        "    lowercase_string = input_string.lower()\n",
+        "    print(\"uppercase:\", uppercase_string)\n",
+        "    print(\"lowercase:\", lowercase_string)\n",
+        "\n",
+        "input_string = input(\"Enter a string: \")\n",
+        "convert(input_string)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
-        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e"
+        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
+        "outputId": "005205cb-2bcd-4a91-ab90-109ef323834f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: hello world\n",
+            "Enter the character to count: hello world\n",
+            "The character 'hello world' appears 1 times in the string.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)\n",
+        "string = input(\"Enter a string: \")\n",
+        "char_to_count = input(\"Enter the character to count: \")\n",
+        "\n",
+        "occurrences = string.count(char_to_count)\n",
+        "print(f\"The character '{char_to_count}' appears {occurrences} times in the string.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
-        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8"
+        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
+        "outputId": "06713a0f-1245-4b51-eb28-bd126ab8511a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your name:navyasree\n",
+            "Hello, navyasree, Good morning\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)"
+        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)\n",
+        "name=input(\"Enter your name:\")\n",
+        "print(f\"Hello, {name}, Good morning\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
-        "id": "189296cf-77e6-4f48-b010-77458da5bc9d"
+        "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
+        "outputId": "d4a779f7-b730-4653-a3ba-372468e971ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the first number7\n",
+            "Enter the second number9\n",
+            "the sum of7.0and9.0is:16.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take two numbers as input and print their sum."
+        "# Write a Python program to take two numbers as input and print their sum.\n",
+        "num1=float(input(\"Enter the first number\"))\n",
+        "num2=float(input(\"Enter the second number\"))\n",
+        "sum_of_numbers=num1+num2\n",
+        "print(f\"the sum of{num1}and{num2}is:{sum_of_numbers}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "0563b26c-0218-47b8-9035-98beb73b0931",
       "metadata": {
-        "id": "0563b26c-0218-47b8-9035-98beb73b0931"
+        "id": "0563b26c-0218-47b8-9035-98beb73b0931",
+        "outputId": "61122aff-20e4-4fd5-bc2b-d0a958ffcce8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your name:mouni\n",
+            "Enter your age20\n",
+            "mouni is 20 years old.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to format and display a string containing the user's name and age. (User input required)"
+        "# Write a Python program to format and display a string containing the user's name and age. (User input required)\n",
+        "name=input(\"Enter your name:\")\n",
+        "age=int(input(\"Enter your age\"))\n",
+        "formatted_string=f\"{name} is {age} years old.\"\n",
+        "print(formatted_string)"
       ]
     },
     {
@@ -489,7 +582,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero."
+        "#\n"
       ]
     },
     {
