--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
         "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
         "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
@@ -478,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
         "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
         "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
@@ -535,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "0563b26c-0218-47b8-9035-98beb73b0931",
       "metadata": {
         "id": "0563b26c-0218-47b8-9035-98beb73b0931",
@@ -582,7 +582,7 @@
       },
       "outputs": [],
       "source": [
-        "#\n"
+        "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero.\n"
       ]
     },
     {
