--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -575,26 +575,103 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
       "metadata": {
-        "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de"
+        "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be7a348d-0c58-42c3-c05e-69790b752d9c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number15\n",
+            "The number is positive\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero.\n"
+        "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero.\n",
+        "number=float(input(\"Enter a number\"))\n",
+        "if number>0:\n",
+        "  print(\"The number is positive\")\n",
+        "elif number<0:\n",
+        "  print(\"The number is negative\")\n",
+        "else:\n",
+        "  print(\"The number is zero\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "number=float(input(\"Enter a number\"))\n",
+        "if number>0:\n",
+        "  print(\"The number is positive\")\n",
+        "elif number<0:\n",
+        "  print(\"The number is negative\")\n",
+        "else:\n",
+        "  print(\"The number is zero\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4PWoOceqxCMC",
+        "outputId": "ca7b8894-f8d0-403a-fa1c-b36768889ace"
+      },
+      "id": "4PWoOceqxCMC",
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number0.00\n",
+            "The number is zero\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
       "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
       "metadata": {
-        "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7"
+        "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b8fd3f38-f0ce-41b9-f220-d1bbc3e854a4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the first number12\n",
+            "Enter the second number9\n",
+            "Enter the third number8\n",
+            "The maximum number is: 12.0\n",
+            "the maximum number is: 12.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the maximum of three numbers. (User input for the numbers)"
+        "# Write a Python program to find the maximum of three numbers. (User input for the numbers)\n",
+        "num1=float(input(\"Enter the first number\"))\n",
+        "num2=float(input(\"Enter the second number\"))\n",
+        "num3=float(input(\"Enter the third number\"))\n",
+        "if num1>=num2 and num1>num3:\n",
+        "  print(\"The maximum number is:\",num1)\n",
+        "elif num2>=num1 and num2>num3:\n",
+        "  print(\"The maximum number is:\",num2)\n",
+        "else:\n",
+        "  print(\"The maximum number is:\",num3)\n",
+        "print(\"the maximum number is:\",max(num1,num2,num3))"
       ]
     },
     {
