--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -575,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
       "metadata": {
         "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
@@ -624,7 +624,7 @@
         "outputId": "ca7b8894-f8d0-403a-fa1c-b36768889ace"
       },
       "id": "4PWoOceqxCMC",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
       "metadata": {
         "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
@@ -676,14 +676,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
-        "id": "3f6d1f45-eb68-4142-89d6-510046f21879"
+        "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
+        "outputId": "ce8f3355-2fc4-46a4-c137-7da4768edd97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a year2024\n",
+            "2024 is a leap year\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a year is a leap year. (User input for the year)"
+        "# Write a Python program to check if a year is a leap year. (User input for the year)\n",
+        "year=int(input(\"Enter a year\"))\n",
+        "if(year%4==0 and year%100!=0) or (year%400==0):\n",
+        "  print(year,\"is a leap year\")\n",
+        "else:\n",
+        "  print(year,\"is not a leap year\")\n"
       ]
     },
     {
@@ -695,7 +713,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)"
+        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)\n"
       ]
     },
     {
