--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -676,11 +676,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 28,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
         "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
-        "outputId": "ce8f3355-2fc4-46a4-c137-7da4768edd97",
+        "outputId": "74beb111-51a7-44d7-b559-bcefaf51d151",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -698,10 +698,10 @@
       "source": [
         "# Write a Python program to check if a year is a leap year. (User input for the year)\n",
         "year=int(input(\"Enter a year\"))\n",
-        "if(year%4==0 and year%100!=0) or (year%400==0):\n",
-        "  print(year,\"is a leap year\")\n",
+        "if (year%4==0 and year%100!=0) or (year%400==0):\n",
+        "  print(f\"{year} is a leap year\")\n",
         "else:\n",
-        "  print(year,\"is not a leap year\")\n"
+        "  print(f\"{year} is not a leap year\")"
       ]
     },
     {
@@ -712,9 +712,7 @@
         "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b"
       },
       "outputs": [],
-      "source": [
-        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)\n"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
