--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -676,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
         "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
@@ -706,24 +706,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
       "metadata": {
-        "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b"
+        "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
+        "outputId": "ea19c580-fdc0-4fb2-e712-0fe4818b9d6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number15\n",
+            "15is divisible by both 3 and 5\n"
+          ]
+        }
+      ],
+      "source": [
+        " #Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)\n",
+        "number=int(input(\"Enter a number\"))\n",
+        "if number%3==0 and number%5==0:\n",
+        "  print(f\"{number}is divisible by both 3 and 5\")\n",
+        "else:\n",
+        "  print(f\"{number}is not divisible by both 3 and 5\")"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "d10c9005-b85d-42f9-81d0-65d149415888",
       "metadata": {
-        "id": "d10c9005-b85d-42f9-81d0-65d149415888"
+        "id": "d10c9005-b85d-42f9-81d0-65d149415888",
+        "outputId": "6fec1490-c7ef-43ec-a928-c4792d8dfc4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string:malayalam\n",
+            "'malayalam'is a palindrome.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a string is a palindrome. (User input for the string)"
+        "# Write a Python program to check if a string is a palindrome. (User input for the string)\n",
+        "def is_palindrome(text):\n",
+        "  text=text.lower()\n",
+        "  return text == text[::-1]\n",
+        "string=input(\"Enter a string:\")\n",
+        "if is_palindrome(string):\n",
+        "  print(f\"'{string}'is a palindrome.\")\n",
+        "else:\n",
+        "  print(f\"'{string}'is not a palindrome\")"
       ]
     },
     {
@@ -735,7 +776,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to print numbers from 1 to 10 using a for loop."
+        "# Write a Python program to print numbers from 1 to 10 using a for loop.\n"
       ]
     },
     {
