--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -706,7 +706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
       "metadata": {
         "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
@@ -736,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "d10c9005-b85d-42f9-81d0-65d149415888",
       "metadata": {
         "id": "d10c9005-b85d-42f9-81d0-65d149415888",
@@ -769,38 +769,111 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
       "metadata": {
-        "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857"
+        "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a2cbd8f-c275-4379-aa2d-c62954248976"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print numbers from 1 to 10 using a for loop.\n"
+        "# Write a Python program to print numbers from 1 to 10 using a for loop.\n",
+        "for i in range(1,11):\n",
+        "  print(i)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
       "metadata": {
-        "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389"
+        "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e8dff555-5457-46ac-de65-20399049adc0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print all even numbers from 1 to 20 using a while loop."
+        "# Write a Python program to print all even numbers from 1 to 20 using a while loop.\n",
+        "number=2\n",
+        "while number <=20:\n",
+        "  print(number)\n",
+        "  number +=2"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
       "metadata": {
-        "id": "c09ca878-167e-49ca-97f0-247a43c9b472"
+        "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c9ed66f-f589-47bd-8804-57403455b4e5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number23\n",
+            "23*1=23\n",
+            "23*2=46\n",
+            "23*3=69\n",
+            "23*4=92\n",
+            "23*5=115\n",
+            "23*6=138\n",
+            "23*7=161\n",
+            "23*8=184\n",
+            "23*9=207\n",
+            "23*10=230\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the multiplication table of a given number using a for loop. (User input for the number)"
+        "# Write a Python program to print the multiplication table of a given number using a for loop. (User input for the number)\n",
+        "number=int(input(\"Enter a number\"))\n",
+        "for i in range(1,11):\n",
+        "  print(f\"{number}*{i}={number*i}\")"
       ]
     },
     {
@@ -812,7 +885,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)"
+        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)\n"
       ]
     },
     {
