--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -769,7 +769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
       "metadata": {
         "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
@@ -804,7 +804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
       "metadata": {
         "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
@@ -841,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
       "metadata": {
         "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
@@ -878,50 +878,155 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
       "metadata": {
-        "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25"
+        "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
+        "outputId": "6cf7e0d3-0d0a-4e6c-d898-9366e3b49aca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a positive integer (n): 34\n",
+            "The sum of numbers from 1 to 34 is: 595\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)\n"
+        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)\n",
+        "n = int(input(\"Enter a positive integer (n): \"))\n",
+        "sum_of_numbers = 0\n",
+        "current_number = 1\n",
+        "while current_number <= n:\n",
+        "    sum_of_numbers += current_number\n",
+        "    current_number += 1\n",
+        "print(\"The sum of numbers from 1 to\", n, \"is:\", sum_of_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
       "metadata": {
-        "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a"
+        "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
+        "outputId": "815223cd-29b7-4438-a062-ad1eb7ecb907",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a non-negative integer: 54\n",
+            "The factorial of 54 is: 230843697339241380472092742683027581083278564571807941132288000000000000\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the factorial of a number using a while loop. (User input for the number)"
+        "# Write a Python program to calculate the factorial of a number using a while loop. (User input for the number)\n",
+        "number = int(input(\"Enter a non-negative integer: \"))\n",
+        "factorial = 1\n",
+        "current_number = 1\n",
+        "while current_number <= number:\n",
+        "    factorial *= current_number\n",
+        "    current_number += 1\n",
+        "print(f\"The factorial of {number} is: {factorial}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
       "metadata": {
-        "id": "68467ccc-d696-4ef1-84c4-164c9d87f755"
+        "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
+        "outputId": "1a3bda82-43c3-49ff-e151-9ff7c637b80a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of terms in the Fibonacci sequence: 5\n",
+            "The Fibonacci sequence up to 5 terms is: [0, 1, 1]\n",
+            "The Fibonacci sequence up to 5 terms is: [0, 1, 1, 2]\n",
+            "The Fibonacci sequence up to 5 terms is: [0, 1, 1, 2, 3]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)"
+        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)\n",
+        "n = int(input(\"Enter the number of terms in the Fibonacci sequence: \"))\n",
+        "fibonacci_sequence = [0, 1]\n",
+        "while len(fibonacci_sequence) < n:\n",
+        "    next_number = fibonacci_sequence[-1] + fibonacci_sequence[-2]\n",
+        "    fibonacci_sequence.append(next_number)\n",
+        "    print(\"The Fibonacci sequence up to\", n, \"terms is:\", fibonacci_sequence)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
       "metadata": {
-        "id": "5bebd1f3-2606-4102-aa55-01cb1650f632"
+        "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
+        "outputId": "ba379306-e4f1-4266-fa9d-126e326a0669",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "11\n",
+            "13\n",
+            "17\n",
+            "19\n",
+            "23\n",
+            "29\n",
+            "31\n",
+            "37\n",
+            "41\n",
+            "43\n",
+            "47\n",
+            "53\n",
+            "59\n",
+            "61\n",
+            "67\n",
+            "71\n",
+            "73\n",
+            "79\n",
+            "83\n",
+            "89\n",
+            "97\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find all the prime numbers from 1 to 100."
+        "# Write a Python program to find all the prime numbers from 1 to 100.\n",
+        "for number in range(2,101):\n",
+        "  is_prime=True\n",
+        "  for i in range(2,int(number**0.5)+1):\n",
+        "    if number%i==0:\n",
+        "      is_prime=False\n",
+        "      break\n",
+        "  if is_prime:\n",
+        "    print(number)"
       ]
     },
     {
@@ -938,38 +1043,139 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "numbers = [10, 25, 40, 55, 70, 85]\n",
+        "\n",
+        "for number in numbers:\n",
+        "    if number > 50:\n",
+        "        print(f\"Found a number greater than 50: {number}\")\n",
+        "        break  # Exit the loop when the condition is met\n",
+        "    else:\n",
+        "        print(f\"Current number: {number}\")"
+      ],
+      "metadata": {
+        "id": "yyGqiTqW5b9c",
+        "outputId": "97492746-0eee-4041-d29c-07c3ea4c9898",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "yyGqiTqW5b9c",
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Current number: 10\n",
+            "Current number: 25\n",
+            "Current number: 40\n",
+            "Found a number greater than 50: 55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
       "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
       "metadata": {
-        "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed"
+        "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
+        "outputId": "3e27afd7-1100-444d-c844-658bc88914b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n",
+            "11\n",
+            "13\n",
+            "15\n",
+            "17\n",
+            "19\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to skip even numbers while printing numbers from 1 to 20 using a for loop."
+        "# Write a Python program to skip even numbers while printing numbers from 1 to 20 using a for loop.\n",
+        "for number in range(1,21):\n",
+        "  if number%2==0:\n",
+        "    continue\n",
+        "  print(number)\n",
+        ""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
       "metadata": {
-        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1"
+        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
+        "outputId": "9a9805a9-5df3-4389-e3e9-f794b2834b0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: navya\n",
+            "Enter the character to count: a\n",
+            "The character 'a' appears 2 times in the string.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)\n",
+        "string = input(\"Enter a string: \")\n",
+        "char_to_count = input(\"Enter the character to count: \")\n",
+        "count = 0\n",
+        "for char in string:\n",
+        "    if char == char_to_count:\n",
+        "        count += 1\n",
+        "print(f\"The character '{char_to_count}' appears {count} times in the string.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
       "metadata": {
-        "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011"
+        "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
+        "outputId": "147b4f27-7584-419c-c0af-e96c09faed3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 23\n",
+            "The sum of digits is: 5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the sum of digits of a number. (User input for the number)"
+        "# Write a Python program to calculate the sum of digits of a number. (User input for the number)\n",
+        "number = int(input(\"Enter a number: \"))\n",
+        "sum_of_digits = 0\n",
+        "while number > 0:\n",
+        "    digit = number % 10\n",
+        "    sum_of_digits += digit\n",
+        "    number //= 10\n",
+        "print(\"The sum of digits is:\", sum_of_digits)\n"
       ]
     },
     {
@@ -991,7 +1197,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to create a list of integers and print the sum of the elements."
+        "# Write a Python program to create a list of integers and print the sum of the elements.\n"
       ]
     },
     {
